Project

General

Profile

Actions

Bug #38041

closed

Fix recovery and backfill priority handling

Added by David Zafman about 5 years ago. Updated about 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
David Zafman
Category:
Backfill/Recovery
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous, mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Related issues 3 (0 open3 closed)

Related to RADOS - Bug #27985: force-backfill sets forced_recovery instead of forced_backfill in 13.2.1ResolvedDavid Zafman08/27/2018

Actions
Copied to RADOS - Backport #38274: luminous: Fix recovery and backfill priority handlingResolvedDavid ZafmanActions
Copied to RADOS - Backport #38275: mimic: Fix recovery and backfill priority handlingResolvedDavid ZafmanActions
Actions #1

Updated by David Zafman about 5 years ago

  • Related to Bug #27985: force-backfill sets forced_recovery instead of forced_backfill in 13.2.1 added
Actions #2

Updated by David Zafman about 5 years ago

A PG in backfill_wait can be set to force-backfill state, but the reservation request has already been queued at a non-force priority. The new priority should be OSD_RECOVERY_PRIORITY_FORCED (255).

Actions #3

Updated by David Zafman about 5 years ago

  • Category set to Backfill/Recovery
Actions #4

Updated by David Zafman about 5 years ago

  • Subject changed from Create tests for recovery and backfill priority handling to Fix recovery and backfill priority handling
Actions #5

Updated by David Zafman about 5 years ago

  • Pull request ID set to 26213
Actions #6

Updated by Neha Ojha about 5 years ago

  • Status changed from New to Fix Under Review
Actions #7

Updated by David Zafman about 5 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #8

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38274: luminous: Fix recovery and backfill priority handling added
Actions #9

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38275: mimic: Fix recovery and backfill priority handling added
Actions #10

Updated by David Zafman about 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF